Fix some shifting on hover in Other Profiles tab (DesktopProfile).
Fixed some shifting which occurred when hoving small-icon-boxes and the difference tags.

--- a/src/ui/styles/DesktopProfile.css
+++ b/src/ui/styles/DesktopProfile.css
@@ -305,14 +305,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 120px;
-  transition:
-    background 0.2s,
-    transform 0.1s;
-}
-
-.difference-tag:hover {
-  background: rgba(var(--color-highlightYellow), 1);
-  transform: scale(1.05);
+  user-select: none;
 }
 
 .small-icon-list {
@@ -334,10 +327,6 @@
   transition: transform 0.2s;
 }
 
-.small-icon-box:hover {
-  transform: scale(1.05);
-}
-
 .small-icon-name {
   font-size: 10px;
   color: white;
@@ -347,4 +336,5 @@
   white-space: nowrap;
   max-width: 100%;
   margin-top: 4px;
+  user-select: none;
 }
